package Main;

 public class Day {
    static int day=1;


    public static void nextDay(){
        day++;
    }
    public static int getDay() {
        return day;
    }
}
