package Main;

public class Death extends Events{
    public Death(String message){
        super(message);
    }
    public Death(){
        super("The snail is dead");
    }
}
