package Main;

public class Alive extends Events {
    public Alive(String message) {
        super(message);
    }

    public Alive() {
        super("The snail is alive");
    }
}
