package Main;

public class CameOut extends Events {
    public CameOut() {
        super("The snail get out of the well");
    }
}
